## Day 17 总结
- ChatModelClient 新增 streamChat 方法
- MockChatModelClient 支持模拟流式输出
- DeepSeekChatModelClient 接入原生 stream=true
- 使用 RestClient exchange 读取 DeepSeek SSE 响应
- 解析 data: 开头的流式数据
- 识别 data: [DONE] 结束标记
- 从 choices[0].delta.content 提取模型输出片段
- ChatStreamServiceImpl 从伪流式升级为真流式
- 流式完成后保存完整 assistant 回复
- summary 更新和 memory 裁剪逻辑保持不变

## 当前流式流程

```text
前端请求 POST /chat/stream
↓
后端构造上下文
↓
DeepSeek stream=true
↓
DeepSeek 返回 data: {...delta.content...}
↓
后端解析 content
↓
SSE event:message 推给前端
↓
流式结束后保存完整回复
↓
更新 summary / 裁剪 memory